--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
   <div class="page">
     <header class="header">
       <img src="images/logo_place_header.svg" alt="логотип яндекс практикум" class="logo logo_place_header">
-      <h1 class="header__title header__title_place">Научиться учиться</h1>
-      <p class="header__subtitle header__subtitle_place">Какие современные и эффективные подходы к обучению вы
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы
         можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &#8594</a>
+        <a href="#" class="header__link">Узнать &#8594;</a>
       </p>
-      <img src="images/header-image.png" alt="картина опять двойка" class="header__main-illustration 
-        header__main-illustration_place">
-      <div class="header__square-pic header__square-pic_place"></div>
+      <img src="images/header-image.png" alt="картина опять двойка" class="header__main-illustration">
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -40,123 +39,124 @@
         </div>
       </section>
       <section class="digits">
-        <h1 class="section-title">Цифры и факты</h1>
-        <h2 class="section-subtitle">Про учёбу и мозг</h2>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <div class="table">
           <div class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
-            <h4 class="table__text">Число нейронов в мозге человека</h4>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">2.1 миллиарда</h3>
-            <h4 class="table__text">Число нуждающихся в повышении квалификации</h4>
-            <h5 class="table__text">Всемирный Банк, 2017</h5>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">1000 терабайт</h3>
-            <h4 class="table__text">Объём памяти человека</h4>
+            <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">500 триллионов</h3>
-            <h4 class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</h4>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
-            <h4 class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</h4>
-            <h5 class="table__text">Всемирный Банк, 2017</h5>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">17–20 лет</h3>
-            <h4 class="table__text">Пик обучаемости</h4>
+            <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">1885 год</h3>
-            <h4 class="table__text">Открытие кривой забывания</h4>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">1889 год</h3>
-            <h4 class="table__text">Открытие условного рефлекса</h4>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
       <section class="feynman">
-        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &#8594</a>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <img src="images/feynman.png" alt="Ричард Фейнман" class="feynman__image">
       </section>
       <section class="kaufman">
-        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
-        <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
-            <h4 class="table__text table__text_theme_dark">Выберите привлекательный проект.</h4>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">2</h3>
-            <h4 class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</h4>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">3</h3>
-            <h4 class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</h4>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">4</h3>
-            <h4 class="table__text table__text_theme_dark">Разбейте навык на элементы.</h4>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">5</h3>
-            <h4 class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</h4>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
-            <h4 class="table__text table__text_theme_dark">Устраните препятствия для занятий.</h4>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">7</h3>
-            <h4 class="table__text table__text_theme_dark">Выделите специальное время для занятий.</h4>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
-            <h4 class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</h4>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
-            <h4 class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными
-              интервалами.</h4>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными
+              интервалами.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">10</h3>
-            <h4 class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</h4>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img src="images/kaufman-triangle.svg" class="kaufman__triangle">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content-copyright">
+        <div class="footer__column footer__column_content-copyright">
           <img src="images/logo_place_footer.svg" alt="логотип яндекс практикум" class="logo logo_place_footer">
-          <h1 class="footer__author">&copy Roman Bondarev</h1>
+          <p class="footer__author">&copy; Roman Bondarev</p>
         </div>
-        <div class="footer__column_content-info">
-          <h1 class="footer__column-heading">О Практикуме</h1>
-          <div class="footer__column-links">
+        <div class="footer__column footer__column_content-info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <nav class="footer__column-links">
             <a href="#" class="footer__column-link">Главная</a>
             <a href="#" class="footer__column-link">Концепция</a>
             <a href="#" class="footer__column-link">Наставники</a>
-          </div>
+          </nav>
         </div>
-        <div class="footer__column_content-social">
-          <h1 class="footer__column-heading">Соцсети</h1>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link"><img src="images/youtube-icon.svg"
+        <div class="footer__column footer__column_content-social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <nav class="footer__column-links">
+            <a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt="YouTube"
                 class="footer__social-icon">YouTube</a>
-            <a href="#" class="footer__column-link"><img src="images/vk_color_white.svg"
+            <a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt="ВКонтакте"
                 class="footer__social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg"
+            <a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt="TikTok"
                 class="footer__social-icon">TikTok</a>
-          </div>
+          </nav>
         </div>
       </div>
     </footer>
