--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
         <div class="footer__column footer__column_content-social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <nav class="footer__column-links">
-            <a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt="YouTube"
+            <a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt="Ютьуб"
                 class="footer__social-icon">YouTube</a>
             <a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt="ВКонтакте"
                 class="footer__social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt="TikTok"
+            <a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt="ТикТок"
                 class="footer__social-icon">TikTok</a>
           </nav>
         </div>
