--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Roman Bondarev">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 
 <body>
@@ -20,7 +19,7 @@
         <a href="#" class="header__link">Узнать &#8594;</a>
       </p>
       <img src="images/header-image.png" alt="картина опять двойка" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic header__square-pic_rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -37,6 +36,73 @@
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img src="images/cards-attention.png" alt="книга Брианы Уист, от выжных инсайтов к реальным переменам"
+              class="cards__image">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__descrition">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img src="images/cards-recall.png" alt="скульптура Этьена Фальконе, мальчик со свирелью"
+              class="cards__image">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__descrition">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img src="images/cards-interliving.png" alt="станция всемирного торгового центра в Нью-Йорке"
+              class="cards__image">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__descrition">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img src="images/cards-question.png" alt="интерьер библиотеки Штутгарта" class="cards__image">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__descrition">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img src="images/cards-competence.png" alt="стопка книг" class="cards__image">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__descrition">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen class="video__iframe"></iframe>
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen class="video__iframe"></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
+              гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да
+              так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И
+              тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
+              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <img src="images/feynman.png" alt="Ричард Фейнман" class="feynman__image">
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -78,11 +144,20 @@
           </div>
         </div>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &#8594;</a>
-        <img src="images/feynman.png" alt="Ричард Фейнман" class="feynman__image">
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по
+            всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся
+            повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="images/khan-book.jpg" alt="Книга Салман Хан, Весь мир школа" class="khan__book-pic">
+            <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -130,7 +205,21 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle kaufman__triangle_rotation"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a href="#" class="resources__link"><img src="images/logo/resources-arzamas.svg" alt="Арзамас"
+              class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="images/logo/resources-n1.svg" alt="Н плюс"
+              class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="images/logo/resources-strelka.svg" alt="Стрелка"
+              class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="images/logo/resources-polka.svg" alt="Полка"
+              class="resources__logo"></a>
+        </div>
       </section>
     </main>
     <footer class="footer">
@@ -150,12 +239,12 @@
         <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <nav class="footer__column-links">
-            <a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt="Ютьуб"
-                class="footer__social-icon">YouTube</a>
-            <a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt="ВКонтакте"
-                class="footer__social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt="ТикТок"
-                class="footer__social-icon">TikTok</a>
+            <a href="https://www.youtube.com/" target="_blank" class="footer__column-link"><img
+                src="images/youtube-icon.svg" alt="Ютьуб" class="footer__social-icon">YouTube</a>
+            <a href="https://vk.com/" target="_blank" class="footer__column-link"><img src="images/vk_color_white.svg"
+                alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a>
+            <a href="https://www.tiktok.com/" target="_blank" class="footer__column-link"><img
+                src="images/tiktok-icon.svg" alt="ТикТок" class="footer__social-icon">TikTok</a>
           </nav>
         </div>
       </div>
