--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <div class="video__iframes">
-          <iframe src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
+        <ul class="video__iframes">
+          <li><iframe src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen class="video__iframe"></iframe>
-          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
+                      allowfullscreen class="video__iframe"></iframe></li>
+          <li><iframe src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen class="video__iframe"></iframe>
-        </div>
+            allowfullscreen class="video__iframe"></iframe></li>
+        </ul>
       </section>
       <section class="oakley" aria-label="Секция со статьей о Барбаре Оакли">
         <article class="two-columns">
